---
source: src/format.rs
expression: "fmt(indoc!\n{\n    r#\"\n            12332L\n            0L\n            12L\n            0xDEADL\n            1e1L\n            # Technically, R parses this as a float with a warning, but for our purposes this is good enough\n            0.1L\n        \"#\n})"
---
12332L
0L
12L
0xDEADL
1e1L
# Technically, R parses this as a float with a warning, but for our purposes this is good enough
0.1L
